<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".SendOtpActivity"
    android:background="@drawable/gradient_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/clicklogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"

            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg_new"
            android:text="@string/OtpVerification"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="322dp"
            android:layout_height="55dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/we_will_send_you_a_one_time_password_on_your_mobile_number"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" />


        <TextView
            android:layout_width="358dp"
            android:layout_height="37dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"

            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="309dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/btn_bg_new"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:paddingStart="20sp"
                android:paddingTop="10sp"
                android:paddingEnd="20sp"
                android:text="@string/_91"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="145dp"
                android:layout_height="44dp"
                android:background="@null"

                android:hint="XXXXXXXXXX"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingTop="10sp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@color/colorDivider"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonGetOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/btn_bg_new"
                android:text="@string/get_otp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>


    </LinearLayout>

</ScrollView>