<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOtpActivity"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/paste" />

        <TextView
            android:layout_width="365dp"
            android:layout_height="58dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg_new"
            android:text="@string/OtpVerification"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>


        <TextView
            android:layout_width="316dp"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_sent_to"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:paddingTop="1sp"/>

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="1sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="1sp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="1sp"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:paddingTop="1sp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="1sp"
                tools:ignore="LabelFor,TouchTargetSizeCheck" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="165dp"
                android:layout_height="28dp"
                android:layout_margin="4dp"
                android:background="@drawable/btn_text_new"
                android:text="@string/didn_t_received_the_otp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textResendOtp"
                android:layout_width="97dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/btn_text_new"
                android:text="@string/resend_otp"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"/>


        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/btn_bg_new"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>




    </LinearLayout>
</ScrollView>